# GNOLL

./: .coveragerc  .deepsource.toml  .gitignore  .gitmodules  .pep8speaks.yml  .travis.yml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GNOLL.ini  Insertion1.c  Makefile  README.md  SECURITY.md  _config.yml  appveyor.yml  dice  dice.g4  dice.py  index.html  insertSinglyLinkedList.c  lex.yy.c  numeric_dice.md  paper.md  readme.md  requirements.txt  setup_antlr.sh  sonar-project.properties  test.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  macro-request.md
.github/linters/: .markdown-lint.yml
.github/workflows/: benchmark_py.yaml  benchmarking.yaml  c-cpp.yml  codeql-analysis.yml  go-test.yml  greetings.yml  jekyll-gh-pages.yml  joss-generate.yml  js-test.yml  label.yml  lint_SuperLinter.yml  lint_codeQL.yml  lint_sonar.yml  manual_benchmarking.yaml  manual_leakcheck.yml  manual_valgrind.yml  memory_leaks.yml  perl-test.yml  pip_test.yml  publish_JOSS.yml  publish_PyPi.yml  publish_docs.yml  python-publish.yml  pythonpackage.yml  quality_sourcecloud.yml  super-linter.yml  test_C_and_Python.yml  test_JavaScript.yml  test_OS.yml  test_Perl.yml  test_R.yml  test_biinding_R.yml  test_binding_R.yml  test_binding_cpp.yml  test_binding_csharp.yml  test_binding_go.yml  test_binding_haskell.yml  test_binding_java.yml  test_binding_javascript.yml  test_binding_julia.yml  (+14 more)
C/: Makefile  binding.gyp  dice.c  dice.h  dice.i  test.js
builtins/: 2020.dice  AdultDice.dice  Alt_D6.dice  Alt_D6.dice.excluded  BESM.dice  BattleOfTheElements.dice  BloodBowl.dice  CharacterCreation.dice  Emotions.dice  ItalianCards.dice  MagicEightBall.dice  MiceAndMystics.dice  Mosaix.dice  Oracle.dice  RegionalPlayingCards.dice  Rummikub.dice  StarWarsFFG.dice  Tarot_Cards.dice  Tarot_Crads.dice  TraditionalGames.dice  Warhammer_Underworlds.dice  arc_magica.dice  card_games.dice  dicetypes.csv  macros.dice  rolls.csv  slot_machine.dice
builtins/WIP/: ars_magica.dice  d666.dice.excluded
builtins/WIP.md/: arc_magica.dice
doc/: PYTHON.md  SETUP.md  numeric_dice.md
doc/JOSS/: paper.bib  paper.md
doc/gh-pages/: _config.yml  index.md  numeric_dice.md
doc/grammar_railroads/: dice.py  dice_choice.py  dice_math.py  dice_op.py  dice_prog.py
future_tests/: test_arithmetic.csv  test_conditions.csv  test_count_successes.csv  test_custom_dice.csv  test_explosions.csv  test_odd_inputs.csv  test_rerolling.csv  test_several.csv  test_subsets.csv
grammar/: dice.interp  dice.tokens  diceLexer.interp  diceLexer.py  diceLexer.tokens  diceListener.py  diceParser.py
javascript/: demo.css  demo.html  demo.js  dice.js  index.html  require.js
javascript/dice-tower/: Makefile  dice.js  test.js
legacy/tests/: test_clamping.csv  test_conditions.csv  test_current_outliers.csv  test_macros.csv  test_multiple_dice.csv  test_numbers.csv  test_rerolling.csv  test_sequences.csv  test_sided_dice.csv
python/: .coveragerc  Makefile  README.md  dice.py  setup.py  test.py  utils.py
python/dice_tower/: .coveragerc  args.py  dice.py  meta.py  test.py  utils.py
python/grammar/: dice.interp  diceLexer.interp
reqs/: apt_requirements.txt  requirements.txt
scripts/: README.md  release_autoversioning.py
scripts/benchmark/: README.md  benchmark.py  benchmark_cmd.py  benchmark_core.py  benchmark_gnoll_versions.py  benchmark_python.py  requirements.txt  troll_noprint.patch
scripts/demo/: README.md  critical_highlights.py  yatzy.py
scripts/histogram/: README.md  histogram.py  requirements.txt
scripts/python_benchmark/: README.md  benchmark.py  benchmark_cmd.py  requirements.txt
site/: demo.css  demo.html  demo.js
src/: Makefile  README.md
src/C++/: main.cpp  target.mk
src/CSharp/: main.cs  target.mk
src/FORTRAN/: gnoll.f90  target.mk
src/Julia/: main.jl
src/MATLAB/: main.m  target.mk
src/PHP/: index.php  target.mk
src/R/: README.md  main.r  target.mk
src/go/: c_includes  go.mod  main.go  target.mk
src/grammar/: dice.lex  dice.yacc  dice_logic.c  dice_logic.h  lex.yy.c  macro_logic.c  macro_logic.h  pcg_basic.c  pcg_basic.h  safe_functions.c  safe_functions.h  shared_header.h  vector_functions.c  vector_functions.h  y.tab.c  y.tab.h  yacc_header.h
src/haskell/: CHANGELOG.md  src.cabal  target.mk
src/haskell/app/: Main.hs
src/java/: org_gnoll_DiceNotationParser.c  org_gnoll_DiceNotationParser.h  target.mk  test.java
src/js/: README.md  gnoll.js  index.html  package.json  preface.js  script.js  target.mk  webpack.config.js  wrapper.js
src/julia/: Project.toml  main.jl  target.mk
src/kotlin/: main.kt  target.mk
src/lua/: example.lua  target.mk
src/perl/: example_application.pl  target.mk
src/python/: MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  setup.py  simple_dice.py  target.mk  test_arithmetic.py  test_dropping.py  test_fate_dice.py  test_simple_sided_dice.py  util.py  yacc_tests.py  yacc_wrapper.py
src/python/.pytest_cache/v/cache/: lastfailed  nodeids
src/python/DiceTower/: yacc_wrapper.py
src/python/code/dicetower/: c_includes  parser.py
src/python/code/gnoll/: __init__.py  __main__.py  parser.py  validation.py
src/python/dice_tower/: __init__.py  utils.py
src/python/dice_tower/links/: macros.dice
src/python/dicetower/: parser.py
src/ruby/: main.rb  target.mk
src/rust/: Cargo.toml  build.rs  gnoll_bindings.rs  target.mk
src/swig/: GNOLL.i  README.md  gnoll.i  target.mk
tests/: meta_test_info.csv  test_arithmetic.csv  test_clamping.csv  test_conditionals.csv  test_conditions.csv  test_count_successes.csv  test_custom_dice.csv  test_dropping.csv  test_explosions.csv  test_fate_dice.csv  test_fate_dice_math.csv  test_groups.csv  test_macros.csv  test_multiple_dice.csv  test_odd_inputs.csv  test_rerolling.csv  test_sequences.csv  test_several.csv  test_sided_dice.csv  test_simple.csv  test_single_dice.csv  test_strings.csv  test_subsets.csv  test_weird_cases.csv
tests/games/: test_dungeons_and_dragons.csv  (+1 more)
tests/python/: util.py  (+24 more)
(+106 files in other folders)
