cabal-version:      2.4
name:               src
version:            0.1.0.0
-- build-type: Custom

-- custom-setup
--     setup-depends: base ^>=4.16.1.0,
--                    Cabal >= 2.4,
--                    directory == 1.3.*

author:             
maintainer:         

extra-source-files:
    CHANGELOG.md
    README.md

executable src
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        -- base ^>=4.16.1.0,
        base ^>= 4.16.4.0,
        directory

    allow-newer: true

    hs-source-dirs:   app
    default-language: Haskell2010
    -- testing out relative directory
    -- extra-libraries: /home/anant/dev/repos/OCT/GNOLL/src/haskell/dice.so
    extra-libraries: src/haskell/dice.so
