cabal-version:      2.4
name:               src
version:            0.1.0.0
-- build-type: Custom

-- custom-setup
--     setup-depends: base ^>=4.16.1.0,
--                    Cabal >= 2.4,
--                    directory == 1.3.*

author:             
maintainer:         

extra-source-files:
    CHANGELOG.md
    README.md

executable src
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        -- base ^>=4.16.1.0,
        base,
        directory

    hs-source-dirs:   app
    default-language: Haskell2010
    -- Link against ../../build/libdice.so as -ldice (Cabal needs a name, not a .so path).
    extra-lib-dirs:   ../../build
    extra-libraries:  dice
