cabal-version:      2.4
name:               src
version:            0.1.0.0
-- build-type: Custom

-- custom-setup
--     setup-depends: base ^>=4.16.1.0,
--                    Cabal >= 2.4,
--                    directory == 1.3.*

author:             
maintainer:         

extra-source-files:
    CHANGELOG.md
    README.md

executable src
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        -- base ^>=4.16.1.0,
        base,
        directory

    hs-source-dirs:   app
    default-language: Haskell2010
    -- lib/libdice.so is copied from repo build/ by make haskell (stays inside package tree).
    extra-lib-dirs:   lib
    extra-libraries:  dice
