[metadata]
name = dicetower
author = Ian Frederick Vigogne Goodbody Hunter
author_email = ianfhunter@gmail.com
version = 2.2.0
description = a comprehensive dice notation parser
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ianfhunter/dicetower
project_urls =
    Bug Tracker = https://github.com/ianfhunter/DiceTower/issues
classifiers =
    "Development Status :: 4 :: Beta",
    "Programming Language :: Unix Shell",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Games/Entertainment :: Board Games",
    "Topic :: Games/Entertainment :: Role-Playing",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Interpreters",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing"

[options]
include_package_date=True
package_dir =
    = dicetower

packages = find_namespace:
python_requires = >=3.6

[options.packages.find]
where = dicetower
