[metadata]
name = gnoll
author = Ian Frederick Vigogne Goodbody Hunter
author_email = ianfhunter@gmail.com
version = 2.13.0
description = An efficient dice notation parser with extended notation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ianfhunter/gnoll
project_urls =
    Bug Tracker = https://github.com/ianfhunter/gnoll/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Unix Shell
    Programming Language :: C
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Other Audience
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Topic :: Games/Entertainment :: Board Games
    Topic :: Games/Entertainment :: Role-Playing
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Software Development :: Interpreters
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing

[options]
package_dir =
    = code

packages = find_namespace:
python_requires = >=3.6
include_package_data=True

[options.packages.find]
where = code
